<resources>
    <string name="app_name">Time Managing App</string>
    <string name="main_activity">Task Planned</string>
    <string name="create_timer_activity">Add Timer</string>
    <string name="edit_timer_activity">Edit Timer</string>
    <string name="chart_activity">Stats</string>
    <string name="contact_activity">Contact Page</string>
    <string name="action_contact">Contact</string>
    <string name="action_chart">Chart</string>
    <string name="action_delete_all">Delete</string>
    <string name="author">Trieu Vi Tran (Chris)</string>
    <string name="email">t.tran4@uni.brighton.ac.uk</string>
    <string name="github">https://github.com/Chris8018</string>
    <string name="default_duration">00:00:10</string>
</resources>
