<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Author"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/author"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDB9B9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Email"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/email"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDB9B9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Github"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/github"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDB9B9" />


</LinearLayout>